<resources>
    <string name="app_name">WeatherAppTask</string>
    <string name="loading">Loading ..</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="region_name">Region Name</string>

    <string name="tv_wind">Wind</string>
    <string name="tv_pressure">Pressure</string>
    <string name="tv_humidity">Humidity</string>
    <string name="tv_settings">Settings</string>
    <string name="tv_cloud">Cloud</string>
    <string name="tv_temp">Temprature</string>
    <string name="tv_visible">visibility</string>
    <string name="tv_feel_like">Feel Like</string>
    <string name="tv_wind_gust">Wind Gust</string>

</resources>