<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="weatherModel"
            type="com.alamiya.weatherapptask.domain.models.WeatherContentModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheet"
        style="?attr/bottomSheetStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="true"
        app:behavior_peekHeight="16dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.cardview.widget.CardView

            android:id="@+id/measurementsHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"

            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/close_sheet"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_margin="5dp"
                        android:paddingEnd="5dp"
                        android:src="@drawable/close_ic"
                        tools:ignore="RtlSymmetry"></ImageView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="0dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="25dp"
                                android:src="@drawable/temperature_icon" />
                        </androidx.cardview.widget.CardView>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_temp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:ellipsize="end"
                            android:lines="1"
                            android:text="@{weatherModel.temp}"
                            tools:text="25" />

                    </LinearLayout>


                    <!--Pressure-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="0dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="25dp"
                                android:src="@drawable/pressure_gauge" />
                        </androidx.cardview.widget.CardView>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_pressure" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:ellipsize="end"
                            android:lines="1"
                            android:text="@{weatherModel.pressure}"

                            tools:text="SE, 5.3 m/s" />

                    </LinearLayout>

                    <!--Humedity-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="0dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="25dp"
                                android:src="@drawable/humidity" />
                        </androidx.cardview.widget.CardView>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_humidity" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:ellipsize="end"
                            android:lines="1"
                            android:text="@{weatherModel.humidity}"

                            tools:text="SE, 5.3 m/s" />

                    </LinearLayout>

                    <!--Cloud-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="0dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="25dp"
                                android:src="@drawable/clouds" />
                        </androidx.cardview.widget.CardView>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_cloud" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:ellipsize="end"
                            android:lines="1"
                            android:text="@{weatherModel.cloud}"
                            tools:text="30" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="0dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="25dp"
                                android:src="@drawable/wind_speed_icon" />
                        </androidx.cardview.widget.CardView>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_wind" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:ellipsize="end"
                            android:lines="1"
                            android:text="@{weatherModel.wind}"
                            tools:text="SE, 5.3 m/s" />

                    </LinearLayout>


                    <!--Pressure-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="0dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="25dp"
                                android:src="@drawable/visible" />
                        </androidx.cardview.widget.CardView>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_visible" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:ellipsize="end"
                            android:lines="1"
                            android:text="@{weatherModel.visibility}"

                            tools:text="25" />

                    </LinearLayout>

                    <!--Humedity-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="0dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="25dp"
                                android:src="@drawable/feel_like" />
                        </androidx.cardview.widget.CardView>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_feel_like" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:ellipsize="end"
                            android:lines="1"
                            android:text="@{weatherModel.feels_like}"

                            tools:text="25" />

                    </LinearLayout>

                    <!--Cloud-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="0dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="25dp"
                                android:src="@drawable/wind_power" />
                        </androidx.cardview.widget.CardView>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_wind_gust" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:ellipsize="end"
                            android:lines="1"
                            android:text="@{weatherModel.windGust}"
                            tools:text="258" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>